--- a/admin/view/template/extension/menu/default.twig
+++ b/admin/view/template/extension/menu/default.twig
@@ -3,170 +3,196 @@
   <div class="page-header">
     <div class="container-fluid">
       <div class="pull-right">
-        <button type="submit" form="form-module" name="apply" value="1" data-toggle="tooltip" title="{{ button_apply }}" class="btn btn-success"><i class="fa fa-repeat"></i></button>
-        <button type="submit" form="form-module" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa fa-save"></i></button>
-        <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i class="fa fa-reply"></i></a></div>
-        <h1>{{ heading_title }}</h1>
-        <ul class="breadcrumb">
-          {% for breadcrumb in breadcrumbs %}
-          <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-          {% endfor %}
-        </ul>
+        <button type="submit" form="form-module" name="apply" value="1" data-toggle="tooltip" title="{{ button_apply }}"
+          class="btn btn-success"><i class="fa fa-repeat"></i></button>
+        <button type="submit" form="form-module" data-toggle="tooltip" title="{{ button_save }}"
+          class="btn btn-primary"><i class="fa fa-save"></i></button>
+        <a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default"><i
+            class="fa fa-reply"></i></a>
       </div>
+      <h1>{{ heading_title }}</h1>
+      <ul class="breadcrumb">
+        {% for breadcrumb in breadcrumbs %}
+        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+        {% endfor %}
+      </ul>
     </div>
-    <div class="container-fluid">
-      {% if error_warning %}
-      <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+  </div>
+  <div class="container-fluid">
+    {% if error_warning %}
+    <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    </div>
+    {% endif %}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_edit }}</h3>
       </div>
-      {% endif %}
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_edit }}</h3>
-        </div>
-        <div class="panel-body">
-          <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-module" class="form-horizontal">
-            <div class="form-group">
-              <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
-              <div class="col-sm-10">
-                <select name="menu_default_status" id="input-status" class="form-control">
-                  {% if menu_default_status %}
-                  <option value="1" selected="selected">{{ text_enabled }}</option>
-                  <option value="0">{{ text_disabled }}</option>
-                  {% else %}
-                  <option value="1">{{ text_enabled }}</option>
-                  <option value="0" selected="selected">{{ text_disabled }}</option>
-                  {% endif %}
-                </select>
-              </div>
+      <div class="panel-body">
+        <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-module"
+          class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
+            <div class="col-sm-10">
+              <select name="menu_default_status" id="input-status" class="form-control">
+                {% if menu_default_status %}
+                <option value="1" selected="selected">{{ text_enabled }}</option>
+                <option value="0">{{ text_disabled }}</option>
+                {% else %}
+                <option value="1">{{ text_enabled }}</option>
+                <option value="0" selected="selected">{{ text_disabled }}</option>
+                {% endif %}
+              </select>
             </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">{{ entry_cache }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[cache]" value="1" {{ menu_default_settings.cache ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[cache]" value="0" {{ not menu_default_settings.cache ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_cache }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[cache]" value="1" {{ menu_default_settings.cache
+                  ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[cache]" value="0" {{ not menu_default_settings.cache
+                  ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-            <div class="form-group" id="show-catalog">
-              <label class="col-sm-2 control-label">{{ entry_show_catalog }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_catalog]" value="1" {{ menu_default_settings.show_catalog ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_catalog]" value="0" {{ not menu_default_settings.show_catalog ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+          </div>
+          <div class="form-group" id="show-catalog">
+            <label class="col-sm-2 control-label">{{ entry_show_catalog }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_catalog]" value="1" {{
+                  menu_default_settings.show_catalog ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_catalog]" value="0" {{ not
+                  menu_default_settings.show_catalog ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-            <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
-              <label class="col-sm-2 control-label" for="input-heading">{{ entry_catalog_button }}</label>
-              <div class="col-sm-10">
-                {% for language in languages %}
-                <div class="input-group">
-                  <div class="input-group-addon">
-                    <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
-                  </div>
-                  <input type="text" name="menu_default_settings[button][{{ language.language_id}}]" value="{{ menu_default_settings.button[language.language_id] ? menu_default_settings.button[language.language_id] : '' }}" placeholder="{{ entry_catalog_button }}" id="input-button{{ language.language_id}}" class="form-control" />
-                </div></br>
-                {% endfor %}
-              </div>
+          </div>
+          <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
+            <label class="col-sm-2 control-label" for="input-heading">{{ entry_catalog_button }}</label>
+            <div class="col-sm-10">
+              {% for language in languages %}
+              <div class="input-group">
+                <div class="input-group-addon">
+                  <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
+                </div>
+                <input type="text" name="menu_default_settings[button][{{ language.language_id}}]"
+                  value="{{ menu_default_settings.button[language.language_id] ? menu_default_settings.button[language.language_id] : '' }}"
+                  placeholder="{{ entry_catalog_button }}" id="input-button{{ language.language_id}}"
+                  class="form-control" />
+              </div></br>
+              {% endfor %}
             </div>
-            <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
-              <label class="col-sm-2 control-label">{{ entry_show_images }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_images]" value="1" {{ menu_default_settings.show_images ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_images]" value="0" {{ not menu_default_settings.show_images ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+          </div>
+          <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
+            <label class="col-sm-2 control-label">{{ entry_show_images }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_images]" value="1" {{
+                  menu_default_settings.show_images ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_images]" value="0" {{ not
+                  menu_default_settings.show_images ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-            <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
-              <label class="col-sm-2 control-label">{{ entry_image_size }}</label>
-              <div class="col-sm-2">
-                <input type="text" name="menu_default_settings[width]" value="{{ menu_default_settings.width }}" placeholder="{{ entry_width }}" class="form-control" />
-              </div>
-              <div class="col-sm-2">
-                <input type="text" name="menu_default_settings[height]" value="{{ menu_default_settings.height }}" placeholder="{{ entry_height }}" class="form-control" />
-              </div>
+          </div>
+          <div class="form-group catalog-settings {{ menu_default_settings.show_catalog ? '' : 'hidden' }}">
+            <label class="col-sm-2 control-label">{{ entry_image_size }}</label>
+            <div class="col-sm-2">
+              <input type="text" name="menu_default_settings[width]"
+                value="{{ menu_default_settings.width ? menu_default_settings.width : 60 }}"
+                placeholder="{{ entry_width }}" class="form-control" />
             </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">{{ entry_show_special }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_special]" value="1" {{ menu_default_settings.show_special ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_special]" value="0" {{ not menu_default_settings.show_special ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+            <div class="col-sm-2">
+              <input type="text" name="menu_default_settings[height]"
+                value="{{ menu_default_settings.height ? menu_default_settings.height : 60 }}"
+                placeholder="{{ entry_height }}" class="form-control" />
             </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">{{ entry_show_brands }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_brands]" value="1" {{ menu_default_settings.show_brands ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_brands]" value="0" {{ not menu_default_settings.show_brands ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>                
-              </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_show_special }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_special]" value="1" {{
+                  menu_default_settings.show_special ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_special]" value="0" {{ not
+                  menu_default_settings.show_special ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">{{ entry_show_blog }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_blog]" value="1" {{ menu_default_settings.show_blog ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_blog]" value="0" {{ not menu_default_settings.show_blog ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_show_brands }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_brands]" value="1" {{
+                  menu_default_settings.show_brands ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_brands]" value="0" {{ not
+                  menu_default_settings.show_brands ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">{{ entry_show_contacts }}</label>
-              <div class="col-sm-10">
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_contacts]" value="1" {{ menu_default_settings.show_contacts ? 'checked="checked"' : '' }} />
-                  {{ text_yes }}
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="menu_default_settings[show_contacts]" value="0" {{ not menu_default_settings.show_contacts ? 'checked="checked"' : '' }} />
-                  {{ text_no }}
-                </label>
-              </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_show_blog }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_blog]" value="1" {{ menu_default_settings.show_blog
+                  ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_blog]" value="0" {{ not
+                  menu_default_settings.show_blog ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
             </div>
-          </form>
-        </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">{{ entry_show_contacts }}</label>
+            <div class="col-sm-10">
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_contacts]" value="1" {{
+                  menu_default_settings.show_contacts ? 'checked="checked"' : '' }} />
+                {{ text_yes }}
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="menu_default_settings[show_contacts]" value="0" {{ not
+                  menu_default_settings.show_contacts ? 'checked="checked"' : '' }} />
+                {{ text_no }}
+              </label>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
+</div>
 
-  <script>
-    $('#show-catalog input[type="radio"]').on('change', function (e) {
-      if($(this).val() == 1) {
-        $('.catalog-settings').removeClass('hidden');
-      } else  {
-        $('.catalog-settings').addClass('hidden');
-      }   
-    });
-  </script>
+<script>
+  $('#show-catalog input[type="radio"]').on('change', function (e) {
+    if ($(this).val() == 1) {
+      $('.catalog-settings').removeClass('hidden');
+    } else {
+      $('.catalog-settings').addClass('hidden');
+    }
+  });
+</script>
 
-  {{ footer }}
+{{ footer }}
