--- a/catalog/view/theme/default/template/extension/module/store.twig
+++ b/catalog/view/theme/default/template/extension/module/store.twig
@@ -16,9 +16,11 @@
           <a class="box is-active" href="{{ store.url }}">
             <span class="icon-text">
               <span class="icon has-text-primary">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
-                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                 </svg>
               </span>
               <span class="text has-text-weight-bold has-text-primary">{{ store.city }}</span>
@@ -30,9 +32,11 @@
           <a class="box" href="{{ store.url }}">
             <span class="icon-text">
               <span class="icon has-text-primary">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
-                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                  <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                 </svg>
               </span>
               <span class="text">{{ store.city }}</span>
@@ -46,7 +50,7 @@
   </div>
 </div>
 <script>
-  $(document).ready(function() {
+  $(document).ready(function () {
     $('body').on('click', '#stores, #stores-modal .modal-background, #stores-modal .delete', function (e) {
 
       if ($(e.currentTarget).hasClass('modal-background') || $(e.currentTarget).hasClass('delete')) {
@@ -54,22 +58,24 @@
 
         $('#stores-modal .modal-background').one('animationend', function () {
           $('#stores-modal').removeClass('is-animated is-active');
+          history.replaceState(null, null, window.location.pathname + window.location.search);
         });
       } else {
         $('#stores-modal').addClass('is-active');
+        history.pushState(null, null, '#search-modal');
       }
     });
 
-    if($('#stores-modal .box').length > 0) {
+    if ($('#stores-modal .box').length > 0) {
       $('#search-store').parent().show();
     }
 
-    $('#search-store').on('input', function() {
+    $('#search-store').on('input', function () {
       let $input = $(this);
 
       $('#stores-modal .column').hide();
 
-      $('#stores-modal .column').each(function(i, el) {
+      $('#stores-modal .column').each(function (i, el) {
         let $found = $(el).find('.text').text().toLowerCase().includes($input.val().toLowerCase());
 
         if ($found) {
