SEO URL auto generation is done

--- a/admin/view/template/blog/article_form.twig
+++ b/admin/view/template/blog/article_form.twig
@@ -53,7 +53,7 @@
                     <label class="col-sm-2 control-label" for="input-name{{ language.language_id }}">{{ entry_name
                       }}</label>
                     <div class="col-sm-10">
-                      <input type="text" name="article_description[{{ language.language_id }}][name]"
+                      <input onblur="generateSeoUrl(this, {{ language.language_id }})" type="text" name="article_description[{{ language.language_id }}][name]"
                         value="{{ article_description[language.language_id] ? article_description[language.language_id].name }}"
                         placeholder="{{ entry_name }}" id="input-name{{ language.language_id }}" class="form-control" />
                       {% if error_name[language.language_id] %}
