--- a/admin/view/template/catalog/manufacturer_form.twig
+++ b/admin/view/template/catalog/manufacturer_form.twig
@@ -27,10 +27,10 @@
         <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-manufacturer" class="form-horizontal">
           <ul class="nav nav-tabs">
             <li class="active"><a href="#tab-general" data-toggle="tab">{{ tab_general }}</a></li>
-			<li><a href="#tab-data" data-toggle="tab">{{ tab_data }}</a></li>
+			      <li><a href="#tab-data" data-toggle="tab">{{ tab_data }}</a></li>
             <li><a href="#tab-seo" data-toggle="tab">{{ tab_seo }}</a></li>
-			<li><a href="#tab-related" data-toggle="tab">{{ tab_related }}</a></li>
-			<li><a href="#tab-design" data-toggle="tab">{{ tab_design }}</a></li>
+			      <li><a href="#tab-related" data-toggle="tab">{{ tab_related }}</a></li>
+			      <li><a href="#tab-design" data-toggle="tab">{{ tab_design }}</a></li>
           </ul>
 			  <div class="tab-content">
             <div class="tab-pane active" id="tab-general">
@@ -53,7 +53,7 @@
 				  <div class="form-group">
                     <label class="col-sm-2 control-label" for="input-meta-h1{{ language.language_id }}">{{ entry_meta_h1 }}</label>
                     <div class="col-sm-10">
-                      <input type="text" name="manufacturer_description[{{ language.language_id }}][meta_h1]" value="{{ manufacturer_description[language.language_id] ? manufacturer_description[language.language_id].meta_h1 }}" placeholder="{{ entry_meta_h1 }}" id="input-meta-h1{{ language.language_id }}" class="form-control" />
+                      <input onblur="generateSeoUrl(this, {{ language.language_id }})" type="text" name="manufacturer_description[{{ language.language_id }}][meta_h1]" value="{{ manufacturer_description[language.language_id] ? manufacturer_description[language.language_id].meta_h1 }}" placeholder="{{ entry_meta_h1 }}" id="input-meta-h1{{ language.language_id }}" class="form-control" />
                     </div>
                   </div>
                   <div class="form-group">
