--- a/catalog/view/theme/default/template/common/search.twig
+++ b/catalog/view/theme/default/template/common/search.twig
@@ -35,7 +35,7 @@
         $('#search-modal .live-results').fadeOut(300);
       } else {
         $('#search-modal').addClass('is-active');
-        history.pushState(null, null, '#search-modal');
+        history.pushState(null, null, window.location.pathname + '#search-modal');
         $('#search-modal').find('input[name="search"]').focus();
         $('#search-modal').find('input[name="search"]').trigger('input');
       }
