--- a/catalog/view/theme/default/template/extension/module/anycategories.twig
+++ b/catalog/view/theme/default/template/extension/module/anycategories.twig
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="columns is-mobile is-multiline">
       <div class="column is-12">
-        <h1 class="title is-1 mb-5">{{ heading_title }}</h1>
+        <h1 class="title is-1 mb-5 has-text-centered">{{ heading_title }}</h1>
       </div>
       {% for category in categories %}
       <div class="column is-3-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
-        <a class="box" href="{{ category.href }}">
-          <span class="image">
+        <a class="box has-text-centered" href="{{ category.href }}">
+          <span class="image is-flex is-justify-content-center">
             <img loading="lazy" height="{{ image_height }}" width="{{ image_width }}" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
           </span>
           <span class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
