--- a/catalog/view/theme/default/template/extension/module/latest.twig
+++ b/catalog/view/theme/default/template/extension/module/latest.twig
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns is-mobile is-multiline">
       <div class="column is-12">
-        <h3 class="title is-1">{{ heading_title }}</h3>
+        <h3 class="title is-1 mb-5 has-text-centered">{{ heading_title }}</h3>
       </div>
       {% for product in products %}
       <div class="column is-3-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
